--- a/pom.xml
+++ b/pom.xml
@@ -170,14 +170,14 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>${webdrivermanager}</version>
+            <!-- <version>${webdrivermanager}</version> -->
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>${webdrivermanager}</version>
+            <!-- <version>${webdrivermanager}</version> -->
             <scope>test</scope>
         </dependency>
 
