- Adding some wait time to overcome staleness of text notification in standard method "Verif text notification"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ selenium-hub:
 selenium-chrome-1:
   restart: always
   image: selenium/node-chrome-debug
+  ports:
+    - "5900:5900"
   stdin_open: true
   links:
     - selenium-hub:hub
