Exposing ports for vnc server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ selenium-chrome-1:
 selenium-chrome-2:
   restart: always
   image: selenium/node-chrome-debug
+  ports:
+    - "5901:5900"
   stdin_open: true
   links:
     - selenium-hub:hub
